# StarletScene

./: CMakeLists.txt  README.md
inc/StarletScene/: component.hpp  entity.hpp  scene.hpp  sceneLoader.hpp  sceneManager.hpp  system.hpp
inc/StarletScene/component/: camera.hpp  colour.hpp  grid.hpp  light.hpp  model.hpp  primitive.hpp  textureData.hpp  transform.hpp  velocity.hpp
inc/StarletScene/components/: camera.hpp  colour.hpp  component.hpp  grid.hpp  light.hpp  model.hpp  primitive.hpp  textureConnection.hpp  textureData.hpp  transform.hpp  velocity.hpp
inc/StarletScene/manager/: componentManager.hpp  entityManager.hpp  sceneManager.hpp  systemManager.hpp
inc/StarletScene/objects/: camera.hpp  grid.hpp  light.hpp  model.hpp  primitive.hpp  textureData.hpp
inc/StarletScene/parsers/: cameraParser.hpp  colourParser.hpp  gridParser.hpp  lightParser.hpp  modelParser.hpp  primitiveParser.hpp  velocityParser.hpp
inc/StarletScene/system/: cameraFovSystem.hpp  cameraLookSystem.hpp  cameraMoveSystem.hpp  velocitySystem.hpp
inc/StarletScene/systems/: cameraFovSystem.hpp  cameraLookSystem.hpp  cameraMoveSystem.hpp  system.hpp  velocitySystem.hpp
inc/starlet-scene/: component.hpp  entity.hpp  scene.hpp
inc/starlet-scene/component/: camera.hpp  colour.hpp  grid.hpp  light.hpp  model.hpp  primitive.hpp  textureData.hpp  transform.hpp  velocity.hpp
inc/starlet-scene/manager/: component_manager.hpp  entity_manager.hpp  sceneManager.hpp  systemManager.hpp
inc/starlet-scene/system/: cameraMoveSystem.hpp  camera_fov_system.hpp  camera_look_system.hpp  velocitySystem.hpp
src/: sceneLoader.cpp  sceneManager.cpp
src/manager/: sceneManager.cpp  scene_manager.cpp
src/managers/: sceneManager.cpp
src/parsers/: cameraParser.cpp  colourParser.cpp  gridParser.cpp  lightParser.cpp  modelParser.cpp  primitiveParser.cpp  textureParser.cpp  velocityParser.cpp
src/system/: cameraFovSystem.cpp  cameraLookSystem.cpp  cameraMoveSystem.cpp  camera_fov_system.cpp  camera_look_system.cpp  camera_move_system.cpp  velocitySystem.cpp  velocity_system.cpp
src/systems/: CameraLookSystem.cpp  cameraFovSystem.cpp  cameraLookSystem.cpp  cameraMoveSystem.cpp  velocitySystem.cpp
